[package]
name = "venus"
version = "0.1.4"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

toml = "0.8.14"
serde = { version = "1.0.203", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.120" }
