[package]
name = "venus"
version = "0.1.4"
edition = "2021"

[dependencies]
# server
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# error
anyhow = "1.0.86"
thiserror = "1.0.61"
# tools
toml = "0.8.14"
serde = { version = "1.0.203", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.120" }
home = "0.5.9"
dotenvy = "0.15.7"
# sql
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "any",
    "sqlite",
    "time",
] }
