[package]
name = "v2ray-r"
version = "0.0.1"
description = "A v2ray GUI client."
authors = ["xfy"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
tauri = { version = "1.3", features = [
  "shell-open",
  "shell-sidecar",
  "system-tray",
] }
anyhow = "1.0.71"
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.28.1", features = ["full"] }
log = "0.4"
env_logger = "0.10.0"
thiserror = "1.0.40"
base64 = "0.21.1"
serde_derive = "1.0.163"
toml = "0.4.6"
md5 = "0.7.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]