[package]
name = "venus"
version = "0.0.3"
description = "A v2ray GUI client."
authors = ["xfy"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
tauri = { version = "1.4", features = [
  "window-maximize",
  "window-unminimize",
  "window-unmaximize",
  "window-minimize",
  "window-close",
  "window-hide",
  "window-show",
  "window-start-dragging",
  "shell-open",
  "shell-sidecar",
  "system-tray",
] }
anyhow = "1.0.72"
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.29.1", features = ["full"] }
log = "0.4"
env_logger = "0.10.0"
thiserror = "1.0.44"
base64 = "0.21.2"
serde_derive = "1.0.181"
toml = "0.4.10"
md5 = "0.7.0"
home = "0.5.5"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
pluto = { git = "https://github.com/DefectingCat/pluto", branch = 'master' }
chrono = "0.4.26"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
