[package]
name = "venus"
version = "0.0.8"
description = "A v2ray GUI client."
authors = ["xfy"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
tauri = { version = "1.5", features = [
  "window-maximize",
  "window-unminimize",
  "window-unmaximize",
  "window-minimize",
  "window-close",
  "window-hide",
  "window-show",
  "window-start-dragging",
  "shell-open",
  "shell-sidecar",
  "system-tray",
  "macos-private-api",
] }
anyhow = "1.0.75"
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.33.0", features = ["full"] }
log = "0.4"
env_logger = "0.10.0"
thiserror = "1.0.50"
base64 = "0.21.5"
serde_derive = "1.0.190"
toml = "0.4.10"
md5 = "0.7.0"
home = "0.5.5"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-positioner = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = [
  "system-tray",
] }
pluto = { git = "https://github.com/DefectingCat/pluto", branch = 'master' }
chrono = "0.4.31"
sysinfo = "0.29.10"
once_cell = "1.18.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
